--- a/app/templates/category/category.html
+++ b/app/templates/category/category.html
@@ -1,4 +1,4 @@
-{% comment %} {% extends 'base.html' %}
+{% extends 'base.html' %}
 {% block styles %}
 {{ super() }}
 <link rel="stylesheet" href="{{url_for('static', filename='css/category.css')}}">
@@ -32,4 +32,4 @@
 </div>
 
 
-{% endblock %} {% endcomment %}
+{% endblock %}
