--- a/app/static/css/login.css
+++ b/app/static/css/login.css
@@ -12,11 +12,11 @@
     margin-left: 5%;
 }
 .btn-success{
-    background-color: #5df212;
-    border-color: #5df212 ;
+    background-color: #0cd8a5;
+    border-color: #0cd8a5 ;
 }
 .signup-text{
-    color: #5df212;
+    color: #0cd8a5;
 }
 .login-img{
     display: none;
