--- a/app/static/css/profile.css
+++ b/app/static/css/profile.css
@@ -20,6 +20,6 @@
     color: initial;
 }
 .btn-success{
-    background-color: #5df212;
-    border-color: #5df212;
+    background-color: #0cd8a5;
+    border-color: #0cd8a5;
 }
