--- a/app/static/css/register.css
+++ b/app/static/css/register.css
@@ -11,11 +11,11 @@
     margin-top: 8%;
 }
 .btn-success{
-    background-color: #5df212;
-    border-color: #5df212 ;
+    background-color: #0cd8a5;
+    border-color: #0cd8a5 ;
 }
 .login-text{
-    color: #5df212;
+    color: #0cd8a5;
 }
 .register-img{
     display: none;
