fix errors for functionlity

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,7 +16,7 @@
 <div class="nav-lg row">
     <div class="col-4">
         <a href="/">
-            <img src="./static/images/bingo-pitch2.jpg" alt="">
+            <img src="./static/images/SP-Bingo-1.png" alt="">
         </a>
         
     </div>
