--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -8,7 +8,7 @@
 <div class="container">
     <div class="top-main row">
         <div class="col-12 col-sm-7 top-main-img">
-            <img src="./static/images/elevator.jpg" alt="Elevator image">
+            <img src="./static/images/bingo-pitch2.jpg" alt="Bingo image">
         </div>
         <div class="col-12 col-sm-5 top-main-text">
             If you had one shot to cease everything you ever wanted, would you <span class="text-capture">capture</span> it?
@@ -19,7 +19,7 @@
             Pitch-Up your way . <span class="material-icons heart">favorite</span>
         </div>
         <div class="col-12 col-sm-7 top-main-img">
-            <img src="./static/images/elevator1.jpg" alt="Elevator image">
+            <img src="./static/images/bingo2.jpg" alt="BingoPitch image">
         </div>
        
     </div>
