--- a/app/static/css/home.css
+++ b/app/static/css/home.css
@@ -45,7 +45,7 @@
     }
     .section-two-text{
         margin-top: 6%;
-        background-color: white;
+        background-color: rgb(243, 189, 189);
         padding-top: 0px;
         padding-bottom: 0px;
         margin-bottom: 0px;
