still trying to fix errors

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -11,7 +11,7 @@
             <img src="./static/images/bingo-pitch2.jpg" alt="Bingo image">
         </div>
         <div class="col-12 col-sm-5 top-main-text">
-            If you had one shot to cease everything you ever wanted, would you <span class="text-capture">capture</span> it?
+            If you had one shot...like just <strong>One Shot</strong> to cease everything you ever wanted, would you <span class="text-capture">capture</span> it?
         </div>
     </div>
     <div class="top-main row section-two">
